Mostrar mapa en Web

--- a/web/form_prueba.html
+++ b/web/form_prueba.html
@@ -8,5 +8,11 @@
 	<label>Luminosidad</label>
 	<input type="text" name="luminosidad" type="number"> %
 	<br>
+	<label>Latitud</label>
+	<input type="text" name="lat" type="number" value="-34.5"> 
+	<br>
+	<label>Longitud</label>
+	<input type="text" name="lng" type="number" value="-59.1"> 
+	<br>
 	<input type="submit">
 </form>
