--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" href="css/materialize.min.css" />
 	<link rel="stylesheet" href="css/material-icons.css" />
+	<link rel="stylesheet" href="css/leaflet.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/estacion.css" />
 	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="js/leaflet.js"></script>
 	<script type="text/javascript" src="js/estacion.js"></script>
 </head>
 <body>
@@ -28,17 +30,20 @@
 		<section id="actual">
 			<h3>Condición actual</h3>
 			<div class="row center-align">
+
 				<div class="col m4">
 					<label class="row">Temperatura</label>
 					<object id="icono_temperatura" class="icono_medicion" data="img/termometro.svg" type="image/svg+xml"></object>
 					<span id="temperatura_actual" class="medicion_actual"> - ºC</span>
 				</div>
+
 				<div class="col m4 text-center">
 					<label>Humedad relativa</label>
 					<br>
 					<object id="icono_humedad" class="icono_medicion" data="img/humedad.svg" type="image/svg+xml"></object>
 					<span id="humedad_actual" class="medicion_actual"> - %</span>
 				</div>
+
 				<div class="col m4">
 					<label>Luminosidad</label>
 					<br>
@@ -49,10 +54,21 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="row">
+				<label>Localización</label>
+				<div id="mapa" class="mapa"></div>
+			</div>
+
+			<div class="row right-align">
+				<p>Medido el <time id="fecha"></time> a las <time id="hora"></time></p>
+			</div>
+
 		</section>
 
 		<section id="graficos">
 			<h3>Graficos</h3>
+			<canvas id="graficos" width="100%" height="400"></canvas>
 		</section>
 
 		<section id="descargar">
