Codigo Wifi envia datos

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/estacion.css" />
 	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="js/Chart.bundle.min.js"></script>
 	<script type="text/javascript" src="js/leaflet.js"></script>
 	<script type="text/javascript" src="js/estacion.js"></script>
 </head>
@@ -68,11 +69,15 @@
 
 		<section id="graficos">
 			<h3>Graficos</h3>
-			<canvas id="graficos" width="100%" height="400"></canvas>
+			<canvas id="grafico" width="100%"></canvas>
 		</section>
 
 		<section id="descargar">
 			<h3>Descargar</h3>
+			<div class="center-align">
+				<a class="waves-effect waves-light btn-large"><i class="material-icons left">archive</i>Descargar</a>
+			</div>
+
 		</section>
 
 
