Descarga js funcionando

--- a/web/index.html
+++ b/web/index.html
@@ -75,8 +75,7 @@
 			<h3>Gráficos <i class="material-icons">panorama</i></h3>
 			<div class="input-field col s12">
 				<select id="select_hora_grafico">
-					<option value="" disabled selected>Elija una opción de visualización</option>
-					<option value="24hs">24 horas antes</option>
+					<option value="24hs" selected>24 horas antes</option>
 					<option value="12hs">12 horas antes</option>
 					<option value="1hs">1 hora antes</option>
 				</select>
@@ -95,8 +94,12 @@
 				</select>
 			</div>
 			<div class="center-align">
-				<button id="btn_descargar" class="waves-effect teal darken-4 btn-large"><i class="material-icons left">archive</i>Descargar</button>
+				<button id="btn_descargar" class="waves-effect teal darken-4 btn-large">
+					<i class="material-icons left">archive</i>
+					Descargar
+				</button>
 			</div>
+			<p> </p>
 		</section>
 
 	</main>
